--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           попрактиковался с множествами технологий, такими как:<pre>
     1) практические навыки HTML+CSS (pixel-perfect вёрстка по макетам из Figma и Photoshop);
     2) CSS-фреймворк (Bootstrap) + BEM;
-    3) препроцессор SASS;
+    3) препроцессоры SASS/SCSS;
     4) Адаптивная, кроссбраузерная, доступная вёрстка;
     5) опыт программирования на JavaScript;
     6) знание/понимание основных принципов языка (замыкания, рекурсия, async/await, promise, prototype...);
